Fixed background top margin; aligned header-name and header-title

--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,10 @@ h3 {
 }
 
 .static-bg-1 {
-  background-position: top 20px;
   background-image: url(../Images/head_background.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center top;
 }
 
 /* ------------- header menu stuff
@@ -52,21 +54,20 @@ h3 {
 
 .content {
   position: relative;
-  top: 200px;
+  top: 70px;
   width: 100%;
 }
 
 #header-name {
   font-family: 'Montserrat';
   font-size: 68px;
-  margin: 20px;
+  margin-top: 110px;
   background: Images/head_background.png
 }
 
 #header-title {
   font-family: 'Quicksand';
   font-size: 50px;
-  margin: 20px;
   text-align: center;
 }
 
